--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       function myFunction() {
         var name = prompt("enter name", "Nagaraj");
         document.getElementById("demo").innerText =
-          `Hlo! I am ${name} and you` + " " ;
+          `Hlo! I am Nagaraj and you are ${name}`;
       }
     </script>
   </body>
